--- a/src/fakeServer/db.json5
+++ b/src/fakeServer/db.json5
@@ -1,1 +1,1 @@
-{todos:[{id:'f5af',title:'SCSS шапки ',description:'поправить',isChecked:true}]}
+{todos:[{id:'f5af',title:'SCSS шапки ',description:'поправить',isChecked:false},{id:'5ab3',title:'Оптимизировать зависимости package',description:'',isChecked:false}]}
